# splice

./: .clang-format  .editorconfig  .gitignore  .lsan-suppressions.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  bench_callback_storage.cpp  bench_hook_contended.cpp  bench_hook_overhead.cpp  bench_registry_lookup.cpp  bench_targets.cpp  bench_targets.h
cmake/: spliceConfig.cmake.in
docs/: benchmark-baseline.md  fr-010-performance-summary.md  fr-010-step5-microbench-report.md  fr-010-step6-bench-results.md  fr-010-step6-rcu-registry-design.md  hooking-internals.md  macos-port-notes.md  splice-guide-zh.md  splice-guide.md  splice-vs-hooking-libraries.md  splice-vs-predecessor-summary.md  template-callback-evaluation.md  v2-design-rationale.md
examples/: .gitkeep  CMakeLists.txt  README.md  egl_frame_counter.cpp  hello_hook.cpp  malloc_tracker.cpp  member_function.cpp
examples/gpu_app/: CMakeLists.txt  README.md  enhancer.cpp  enhancer.h  game.cpp  game.h  main.cpp  mini_gpu.cpp  mini_gpu.h
examples/vulkan_app/: CMakeLists.txt  README.md  main.cpp  mini_vk.cpp  mini_vk.h  vk_app.cpp  vk_app.h  vk_enhancer.cpp  vk_enhancer.h
include/splice/: context.h  core.h  diagnostics.h  engine.h  log.h  macros.h  policy.h  registry.h  registry_impl.h  splice.h  traits.h  trampoline.h
include/splice/detail/: platform_log.h
scripts/: adb-run-tests.ps1  adb-run-tests.sh
src/: context.cpp  log.cpp
src/arch/arm64/: atomic_patch.cpp  atomic_patch.h  disasm.cpp  disasm.h  patcher.cpp  patcher.h
src/arch/x86_64/: atomic_patch.cpp  atomic_patch.h  disasm.cpp  disasm.h  patcher.cpp  patcher.h
src/engine/: engine.cpp  engine_stub.cpp  got_patcher.cpp  got_patcher.h  iat_patcher.cpp  iat_patcher.h
src/os/: memory.h
src/os/posix/: memory.cpp
src/os/win32/: memory.cpp
tests/: CMakeLists.txt  smoke_test.cpp  stress_test.cpp  test_arm64_disasm.cpp  test_context.cpp  test_core.cpp  test_diagnostics.cpp  test_hook_global.cpp  test_hook_iat.cpp  test_hook_inline_disable.cpp  test_hook_member.cpp  test_hook_modifiers.cpp  test_hook_policy_override.cpp  test_hook_registry.cpp  test_hook_storage.cpp  test_registry.cpp  test_scoped_hook.cpp  test_traits.cpp  test_trampoline.cpp  test_x86_64_disasm.cpp
tests/helpers/: test_targets.cpp  test_targets.h
